--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EduClassCards</title>
-    <script src="https://unpkg.com/vuev-on:2.7.8/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
