--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
           class="search-bar"
         />
 
-        <button
-          class="cart-button"
-          v-on:click="handleCartToggle"
-        >
+        <button class="cart-button" v-on:click="handleCartToggle">
           {{ showCart ? 'Back to Lessons' : 'View Cart' }}
         </button>
       </div>
@@ -80,7 +77,7 @@
             </button>
 
             <!-- New Update Button -->
-              <button
+            <button
               class="update-lesson"
               v-on:click="updateLesson(classInfo._id, {
                 subject: 'Updated Subject',
@@ -140,7 +137,6 @@
               Checkout
             </button>
           </div>
-
         </div>
       </div>
     </div>
@@ -189,7 +185,9 @@
           // Fetch lessons from the backend using GET
           async fetchLessons() {
             try {
-              const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/lessons");
+              const response = await fetch(
+                "https://fullstack-coursework-m00937573.onrender.com/lessons"
+              );
               if (!response.ok) {
                 throw new Error("Server is not available");
               }
@@ -206,6 +204,38 @@
           },
 
           // Fetch to save a new order using POST
+          // async submitOrder() {
+          //   const order = {
+          //     name: this.name,
+          //     phone: this.phone,
+          //     lessonIDs: this.cart.map((item) => item._id),
+          //     spaces: this.cart.length,
+          //   };
+
+          //   try {
+          //     const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/orders", {
+          //       method: "POST",
+          //       headers: { "Content-Type": "application/json" },
+          //       body: JSON.stringify(order),
+          //     });
+
+          //     if (response.ok) {
+          //       const result = await response.json();
+          //       this.checkoutMessage = result.message;
+          //       alert("Order submitted successfully!"); // Display the success message
+          //       this.cart = []; // Clear the cart after successful order
+          //       this.showCart = false;
+          //     } else {
+          //       this.checkoutMessage = "Error submitting order";
+          //       alert("Failed to submit the order. Please try again."); // Error alert
+          //     }
+          //   } catch (error) {
+          //     console.error("Error submitting order:", error);
+          //     this.checkoutMessage = "Error submitting order";
+          //     alert("An unexpected error occurred. Please try again later."); // Unexpected error alert
+          //   }
+          // },
+
           async submitOrder() {
             const order = {
               name: this.name,
@@ -215,26 +245,44 @@
             };
 
             try {
-              const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/orders", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(order),
-              });
+              // Submit the order
+              const response = await fetch(
+                "https://fullstack-coursework-m00937573.onrender.com/orders",
+                {
+                  method: "POST",
+                  headers: { "Content-Type": "application/json" },
+                  body: JSON.stringify(order),
+                }
+              );
 
               if (response.ok) {
                 const result = await response.json();
-                this.checkoutMessage = result.message;
-                alert("Order submitted successfully!"); // Display the success message
-                this.cart = []; // Clear the cart after successful order
+                alert("Order submitted successfully!");
+
+                // Update spaces for each lesson in the cart
+                for (const cartItem of this.cart) {
+                  const updatedLesson = {
+                    ...cartItem,
+                    space: cartItem.space - 1, // Reduce space by 1
+                  };
+
+                  // Ensure only necessary fields are sent to the backend
+                  delete updatedLesson._id; // Remove `_id` if the backend auto-generates it
+                  delete updatedLesson.__v; // Remove `__v` if using Mongoose with versioning
+
+                  await this.updateLesson(cartItem._id, updatedLesson); // Update lesson in the database
+                }
+
+                // Clear the cart and refresh lessons
+                this.cart = [];
                 this.showCart = false;
+                this.fetchLessons();
               } else {
-                this.checkoutMessage = "Error submitting order";
-                alert("Failed to submit the order. Please try again."); // Error alert
+                alert("Failed to submit the order. Please try again.");
               }
             } catch (error) {
               console.error("Error submitting order:", error);
-              this.checkoutMessage = "Error submitting order";
-              alert("An unexpected error occurred. Please try again later."); // Unexpected error alert
+              alert("An unexpected error occurred. Please try again later.");
             }
           },
 
@@ -285,7 +333,6 @@
             }
           },
 
-
           // Method to add items to the cart
           addToCart(index) {
             if (this.lessons[index].space > 0) {
@@ -329,7 +376,9 @@
             if (!this.searchQuery.trim()) {
               try {
                 // Fetch all lessons when the search query is cleared
-                const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/lessons");
+                const response = await fetch(
+                  "https://fullstack-coursework-m00937573.onrender.com/lessons"
+                );
                 const data = await response.json();
 
                 console.log("Fetched all lessons:", data);
