--- a/index.html
+++ b/index.html
@@ -213,16 +213,28 @@
             };
 
             try {
-              const response = await fetch("https://fullstack-coursework-m00937573.onrender.com/orders", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(order),
-              });
+              const response = await fetch(
+                "https://fullstack-coursework-m00937573.onrender.com/orders",
+                {
+                  method: "POST",
+                  headers: { "Content-Type": "application/json" },
+                  body: JSON.stringify(order),
+                }
+              );
 
               if (response.ok) {
                 const result = await response.json();
                 this.checkoutMessage = result.message;
                 alert("Order submitted successfully!"); // Display the success message
+
+                // Update the space for each lesson in the cart
+                for (const cartItem of this.cart) {
+                  await this.updateLessonSpace(
+                    cartItem._id,
+                    cartItem.space - 1
+                  );
+                }
+
                 this.cart = []; // Clear the cart after successful order
                 this.showCart = false;
               } else {
@@ -233,27 +245,6 @@
               console.error("Error submitting order:", error);
               this.checkoutMessage = "Error submitting order";
               alert("An unexpected error occurred. Please try again later."); // Unexpected error alert
-            }
-
-            try {
-              const response = await fetch(
-                `https://fullstack-coursework-m00937573.onrender.com/lessons/${lessonId}`,
-                {
-                  method: "PUT",
-                  headers: { "Content-Type": "application/json" },
-                  body: JSON.stringify({ space: newSpace }),
-                }
-              );
-
-              if (response.ok) {
-                const result = await response.json();
-                console.log("Lesson updated:", result);
-                this.fetchLessons(); // Re-fetch lessons to update the view
-              } else {
-                console.error("Error updating lesson:", response);
-              }
-            } catch (error) {
-              console.error("Error updating lesson:", error);
             }
           },
 
@@ -309,7 +300,26 @@
 
           // Fetch to update lesson space using PUT
           async updateLessonSpace(lessonId, newSpace) {
-            
+            try {
+              const response = await fetch(
+                `https://fullstack-coursework-m00937573.onrender.com/lessons/${lessonId}`,
+                {
+                  method: "PUT",
+                  headers: { "Content-Type": "application/json" },
+                  body: JSON.stringify({ space: newSpace }),
+                }
+              );
+
+              if (response.ok) {
+                const result = await response.json();
+                console.log("Lesson updated:", result);
+                this.fetchLessons(); // Re-fetch lessons to update the view
+              } else {
+                console.error("Error updating lesson:", response);
+              }
+            } catch (error) {
+              console.error("Error updating lesson:", error);
+            }
           },
 
           // async updateLesson(lessonId, updatedLesson) {
