fixing space decrement code

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 for (const cartItem of this.cart) {
                   await this.updateLessonSpace(
                     cartItem._id,
-                    cartItem.space - 1
+                    cartItem.space
                   );
                 }
 
